<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="12dp"
    android:layout_marginBottom="30dp"
    android:layout_marginStart="5dp"
    android:layout_marginEnd="10dp"
    android:layout_marginTop="10dp"
    android:background="@color/white">

    <ImageView
        android:id="@+id/ivProducto"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:scaleType="centerCrop"
        android:src="@drawable/placeholder"
        android:contentDescription="@string/itemDetalle_img" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/tvNombreProd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itemDetalle_img"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvCantidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itemDetalle_cant"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvPrecio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itemDetalle_precio"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/tvSubtotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/itemDetalle_subtotal"
            android:textColor="@color/black"/>
    </LinearLayout>
</LinearLayout>
